# ENIAC23_2E_EVRP_TW

./: Irace_100_instances.txt  Irace_15_instances.txt  Kolmogorov-Smirnov Test of Normality.csv  README.md  Results 2E-EVRP-TW ENIAC23.csv
src/: CMakeLists.txt  main.cpp  newMain.cpp  testesNew.py
src/INSTANCIA/: Parametros.cpp  Parametros.h
